--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,4 +1,4 @@
-$white: #fff !default;
+$white   : #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -8,30 +8,29 @@ $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black: #000 !default;
+$black   : #000 !default;
 
-$blue: #0d6efd !default;
+$blue  : #0d6efd !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
-$pink: #d63384 !default;
-$red: #dc3545 !default;
+$pink  : #d63384 !default;
+$red   : #dc3545 !default;
 $orange: #fd7e14 !default;
 $yellow: #fadb14 !default;
-$green: #52c41a !default;
-$teal: #20c997 !default;
-$cyan: #17a2b8 !default;
+$green : #52c41a !default;
+$teal  : #20c997 !default;
+$cyan  : #17a2b8 !default;
 
-$primary: $blue !default;
+$primary  : $blue !default;
 $secondary: $gray-600 !default;
-$success: $green !default;
-$info: $cyan !default;
-$warning: $yellow !default;
-$danger: $red !default;
-$light: $gray-100 !default;
-$dark: $gray-800 !default;
+$success  : $green !default;
+$info     : $cyan !default;
+$warning  : $yellow !default;
+$danger   : $red !default;
+$light    : $gray-100 !default;
+$dark     : $gray-800 !default;
 
-$theme-colors: (
-    "primary": $primary,
+$theme-colors: ("primary": $primary,
     "secondary": $secondary,
     "success": $success,
     "info": $info,
@@ -41,29 +40,45 @@ $theme-colors: (
     "dark": $dark,
 );
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-sans-serif: -apple-system,
+BlinkMacSystemFont,
+"Segoe UI",
+Roboto,
+"Helvetica Neue",
+Arial,
+"Noto Sans",
+sans-serif,
+"Apple Color Emoji",
+"Segoe UI Emoji",
+"Segoe UI Symbol",
+"Noto Color Emoji" !default;
+$font-family-monospace: SFMono-Regular,
+Menlo,
+Monaco,
+Consolas,
+"Liberation Mono",
+"Courier New",
+monospace !default;
 $font-family-base: $font-family-sans-serif !default;
 
 // 字体大小
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg: $font-size-base * 1.25 !default;
-$font-size-sm: $font-size-base * 0.875 !default;
+$font-size-lg  : $font-size-base * 1.25 !default;
+$font-size-sm  : $font-size-base * 0.875 !default;
 $font-size-root: null !default;
 
 // 字重
 $font-weight-lighter: lighter !default;
-$font-weight-light: 300 !default;
-$font-weight-normal: 400 !default;
-$font-weight-bold: 700 !default;
-$font-weight-bolder: bolder !default;
-$font-weight-base: $font-weight-normal !default;
+$font-weight-light  : 300 !default;
+$font-weight-normal : 400 !default;
+$font-weight-bold   : 700 !default;
+$font-weight-bolder : bolder !default;
+$font-weight-base   : $font-weight-normal !default;
 
 // 行高
 $line-height-base: 1.5 !default;
-$line-height-lg: 2 !default;
-$line-height-sm: 1.25 !default;
+$line-height-lg  : 2 !default;
+$line-height-sm  : 1.25 !default;
 
 // 标题大小
 $h1-font-size: $font-size-base * 2.5 !default;
@@ -74,25 +89,25 @@ $h5-font-size: $font-size-base * 1.25 !default;
 $h6-font-size: $font-size-base !default;
 
 // 链接
-$link-color: $primary !default;
-$link-decoration: none !default;
-$link-hover-color: darken($link-color, 15%) !default;
+$link-color           : $primary !default;
+$link-decoration      : none !default;
+$link-hover-color     : darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
 
 // body
-$body-bg: $white !default;
-$body-color: $gray-900 !default;
+$body-bg        : $white !default;
+$body-color     : $gray-900 !default;
 $body-text-align: null !default;
 
 // Spacing
 $spacer: 1rem !default;
 
 $headings-margin-bottom: $spacer / 2 !default;
-$headings-font-family: null !default;
-$headings-font-style: null !default;
-$headings-font-weight: 500 !default;
-$headings-line-height: 1.2 !default;
-$headings-color: null !default;
+$headings-font-family  : null !default;
+$headings-font-style   : null !default;
+$headings-font-weight  : 500 !default;
+$headings-line-height  : 1.2 !default;
+$headings-color        : null !default;
 
 // Paragraphs
 
@@ -100,24 +115,24 @@ $paragraph-margin-bottom: 1rem !default;
 
 // 字体其他部分 heading list hr 等等
 $headings-margin-bottom: $spacer / 2 !default;
-$headings-font-family: null !default;
-$headings-font-style: null !default;
-$headings-font-weight: 500 !default;
-$headings-line-height: 1.2 !default;
-$headings-color: null !default;
+$headings-font-family  : null !default;
+$headings-font-style   : null !default;
+$headings-font-weight  : 500 !default;
+$headings-line-height  : 1.2 !default;
+$headings-color        : null !default;
 
 $display1-size: 6rem !default;
 $display2-size: 5.5rem !default;
 $display3-size: 4.5rem !default;
 $display4-size: 3.5rem !default;
 
-$display1-weight: 300 !default;
-$display2-weight: 300 !default;
-$display3-weight: 300 !default;
-$display4-weight: 300 !default;
+$display1-weight    : 300 !default;
+$display2-weight    : 300 !default;
+$display3-weight    : 300 !default;
+$display4-weight    : 300 !default;
 $display-line-height: $headings-line-height !default;
 
-$lead-font-size: $font-size-base * 1.25 !default;
+$lead-font-size  : $font-size-base * 1.25 !default;
 $lead-font-weight: 300 !default;
 
 $small-font-size: 0.875em !default;
@@ -128,17 +143,17 @@ $text-muted: $gray-600 !default;
 
 $initialism-font-size: $small-font-size !default;
 
-$blockquote-small-color: $gray-600 !default;
+$blockquote-small-color    : $gray-600 !default;
 $blockquote-small-font-size: $small-font-size !default;
-$blockquote-font-size: $font-size-base * 1.25 !default;
+$blockquote-font-size      : $font-size-base * 1.25 !default;
 
-$hr-color: inherit !default;
-$hr-height: 1px !default;
+$hr-color  : inherit !default;
+$hr-height : 1px !default;
 $hr-opacity: 0.25 !default;
 
 $legend-margin-bottom: 0.5rem !default;
-$legend-font-size: 1.5rem !default;
-$legend-font-weight: null !default;
+$legend-font-size    : 1.5rem !default;
+$legend-font-weight  : null !default;
 
 $mark-padding: 0.2em !default;
 
@@ -155,8 +170,8 @@ $hr-margin-y: $spacer !default;
 // Code
 
 $code-font-size: $small-font-size !default;
-$code-color: $pink !default;
-$pre-color: null !default;
+$code-color    : $pink !default;
+$pre-color     : null !default;
 
 // options 可配置选项
 $enable-pointer-cursor-for-buttons: true !default;
@@ -166,23 +181,23 @@ $enable-pointer-cursor-for-buttons: true !default;
 $border-width: 1px !default;
 $border-color: $gray-300 !default;
 
-$border-radius: 0.25rem !default;
+$border-radius   : 0.25rem !default;
 $border-radius-lg: 0.3rem !default;
 $border-radius-sm: 0.2rem !default;
 
 // 不同类型的 box shadow
-$box-shadow-sm: 0 0.125rem 0.25rem rgba($black, 0.075) !default;
-$box-shadow: 0 0.5rem 1rem rgba($black, 0.15) !default;
-$box-shadow-lg: 0 1rem 3rem rgba($black, 0.175) !default;
+$box-shadow-sm   : 0 0.125rem 0.25rem rgba($black, 0.075) !default;
+$box-shadow      : 0 0.5rem 1rem rgba($black, 0.15) !default;
+$box-shadow-lg   : 0 1rem 3rem rgba($black, 0.175) !default;
 $box-shadow-inset: inset 0 1px 2px rgba($black, 0.075) !default;
 
 // 按钮
 // 按钮基本属性
 $btn-font-weight: 400;
-$btn-padding-y: 0.375rem !default;
-$btn-padding-x: 0.75rem !default;
+$btn-padding-y  : 0.375rem !default;
+$btn-padding-x  : 0.75rem !default;
 $btn-font-family: $font-family-base !default;
-$btn-font-size: $font-size-base !default;
+$btn-font-size  : $font-size-base !default;
 $btn-line-height: $line-height-base !default;
 
 //不同大小按钮的 padding 和 font size
@@ -198,44 +213,50 @@ $btn-font-size-lg: $font-size-lg !default;
 $btn-border-width: $border-width !default;
 
 // 按钮其他
-$btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075) !default;
+$btn-box-shadow: inset 0 1px 0 rgba($white, 0.15),
+0 1px 1px rgba($black, 0.075) !default;
 $btn-disabled-opacity: 0.65 !default;
 
 // 链接按钮
-$btn-link-color: $link-color !default;
-$btn-link-hover-color: $link-hover-color !default;
+$btn-link-color         : $link-color !default;
+$btn-link-hover-color   : $link-hover-color !default;
 $btn-link-disabled-color: $gray-600 !default;
 
 // 按钮 radius
-$btn-border-radius: $border-radius !default;
+$btn-border-radius   : $border-radius !default;
 $btn-border-radius-lg: $border-radius-lg !default;
 $btn-border-radius-sm: $border-radius-sm !default;
 
-$btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
-    box-shadow 0.15s ease-in-out !default;
+$btn-transition: color 0.15s ease-in-out,
+background-color 0.15s ease-in-out,
+border-color 0.15s ease-in-out,
+box-shadow 0.15s ease-in-out !default;
 
 // menu
 $menu-border-width: $border-width !default;
 $menu-border-color: $border-color !default;
-$menu-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075) !default;
-$menu-transition: color 0.15s ease-in-out, border-color 0.15s ease-in-out !default;
+$menu-box-shadow  : inset 0 1px 0 rgba($white, 0.15),
+0 1px 1px rgba($black, 0.075) !default;
+$menu-transition: color 0.15s ease-in-out,
+border-color 0.15s ease-in-out !default;
 
 // menu-item
-$menu-item-padding-y: 0.5rem !default;
-$menu-item-padding-x: 1rem !default;
-$menu-item-active-color: $primary !default;
+$menu-item-padding-y          : 0.5rem !default;
+$menu-item-padding-x          : 1rem !default;
+$menu-item-active-color       : $primary !default;
 $menu-item-active-border-width: 2px !default;
-$menu-item-disabled-color: $gray-600 !default;
+$menu-item-disabled-color     : $gray-600 !default;
 
 //sub-menu
 //submenu
-$submenu-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12), 0 0 6px 0 rgba(0, 0, 0, 0.04);
+$submenu-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12),
+0 0 6px 0 rgba(0, 0, 0, 0.04);
 
 //input
-$input-padding-y: $btn-padding-y !default;
-$input-padding-x: $btn-padding-x !default;
+$input-padding-y  : $btn-padding-y !default;
+$input-padding-x  : $btn-padding-x !default;
 $input-font-family: $btn-font-family !default;
-$input-font-size: $btn-font-size !default;
+$input-font-size  : $btn-font-size !default;
 $input-font-weight: $font-weight-base !default;
 $input-line-height: $btn-line-height !default;
 
@@ -247,41 +268,42 @@ $input-padding-y-lg: $btn-padding-y-lg !default;
 $input-padding-x-lg: $btn-padding-x-lg !default;
 $input-font-size-lg: $btn-font-size-lg !default;
 
-$input-bg: $white !default;
-$input-disabled-bg: $gray-200 !default;
+$input-bg                   : $white !default;
+$input-disabled-bg          : $gray-200 !default;
 $input-disabled-border-color: null !default;
 
-$input-color: $gray-700 !default;
+$input-color       : $gray-700 !default;
 $input-border-color: $gray-400 !default;
 $input-border-width: $border-width !default;
-$input-box-shadow: $box-shadow-inset !default;
+$input-box-shadow  : $box-shadow-inset !default;
 
-$input-border-radius: $border-radius !default;
+$input-border-radius   : $border-radius !default;
 $input-border-radius-lg: $border-radius-lg !default;
 $input-border-radius-sm: $border-radius-sm !default;
 
-$input-focus-bg: $input-bg !default;
+$input-focus-bg          : $input-bg !default;
 $input-focus-border-color: lighten($primary, 25%) !default;
-$input-focus-width: 0.2rem !default;
-$input-focus-color: $input-color !default;
+$input-focus-width       : 0.2rem !default;
+$input-focus-color       : $input-color !default;
 $input-focus-shadow-color: rgba($primary, 0.25) !default;
-$input-focus-box-shadow: 0 0 0 $input-focus-width $input-focus-shadow-color !default;
+$input-focus-box-shadow  : 0 0 0 $input-focus-width $input-focus-shadow-color !default;
 
 $input-placeholder-color: $gray-600 !default;
-$input-plaintext-color: $body-color !default;
+$input-plaintext-color  : $body-color !default;
 
 $input-height-border: $input-border-width * 2 !default;
 
-$input-transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out !default;
+$input-transition: border-color 0.3s ease-in-out,
+box-shadow 0.3s ease-in-out !default;
 
-$input-group-addon-color: $input-color !default;
-$input-group-addon-bg: $gray-200 !default;
+$input-group-addon-color       : $input-color !default;
+$input-group-addon-bg          : $gray-200 !default;
 $input-group-addon-border-color: $input-border-color !default;
 
 // Progress bars
 
-$progress-font-size: $font-size-base * 0.75 !default;
-$progress-bg: $gray-200 !default;
+$progress-font-size    : $font-size-base * 0.75 !default;
+$progress-bg           : $gray-200 !default;
 $progress-border-radius: $border-radius !default;
-$progress-bar-color: $white !default;
+$progress-bar-color    : $white !default;
 $progress-bar-transition: width 0.6s ease !default;
