--- a/src/components/Alert/_style.scss
+++ b/src/components/Alert/_style.scss
@@ -35,6 +35,7 @@
             font-weight: $font-weight-bold;
             font-size  : 26px;
             line-height: 18px;
+            font-style : normal;
         }
     }
 }
