--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,4 +2,5 @@
 @import "./reboot";
 @import "./mixins";
 @import '../components/Button/style';
-@import '../components//Alert/style';
+@import '../components/Alert/style';
+@import '../components/Menu//style';
