--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,9 @@
 @import "./variables";
 @import "./reboot";
 @import "./mixins";
+@import "./animation";
 @import '../components/Button/style';
 @import '../components/Alert/style';
-@import '../components/Menu//style';
+@import '../components/Menu/style';
 @import '../components/Tabs/style';
+@import "../components/Icon/style"
