--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -6,4 +6,5 @@
 @import '../components/Alert/style';
 @import '../components/Menu/style';
 @import '../components/Tabs/style';
-@import "../components/Icon/style"
+@import "../components/Icon/style";
+@import "../components/Input/style";
