--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,10 +1,33 @@
-@import "./variables";
-@import "./reboot";
-@import "./mixins";
-@import "./animation";
-@import '../components/Button/style';
-@import '../components/Alert/style';
-@import '../components/Menu/style';
-@import '../components/Tabs/style';
+// config
+@import "variables";
+
+//layout
+@import "reboot";
+
+//mixin
+@import "mixin";
+
+// animation
+@import "animation";
+// button
+
+@import "../components/Button/style";
+
+// menu
+
+@import "../components/Menu/style";
+
+// icon
 @import "../components/Icon/style";
+
+//input
 @import "../components/Input/style";
+
+//auto-complete
+//@import "../components/AutoComplete/style";
+
+//upload
+//@import "../components/Upload/style";
+
+//progress
+//@import "../components/Progress/style";
