--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -26,6 +26,9 @@
 //auto-complete
 @import "../components/AutoComplete/style";
 
+//alert
+@import "../components/Alert/style";
+
 //upload
 //@import "../components/Upload/style";
 
