--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -30,7 +30,7 @@
 @import "../components/Alert/style";
 
 //upload
-//@import "../components/Upload/style";
+@import "../components/Upload/style";
 
 //progress
 //@import "../components/Progress/style";
