--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -33,4 +33,4 @@
 @import "../components/Upload/style";
 
 //progress
-//@import "../components/Progress/style";
+@import "../components/Progress/style";
